integrate search algorithm and move data to json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -314,6 +314,10 @@
         "label": "WW registration number",
         "search": "Search",
         "searching": "Searching...",
-        "generated-on": "Generated on"
+        "generated-on": "Generated on",
+        "local-label": "WW registration number (Local dataset)",
+        "expiry": "Expiry",
+        "invalid-format": "Invalid format (e.g. WW-000-AA)",
+        "series-too-old": "Series is too old for the dataset"
     }
 }
